# dbt-osmosis

./: .changie.yaml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  FUSION_COMPAT.md  Makefile  README.md  Taskfile.yml  flake.nix  index.html  jaffle_shop.duckdb  pyproject.toml  requirements.txt  sitemap.xml
.beads/: issues.jsonl  last-touched  metadata.json
.changes/: 0.11.10.md  0.11.11.md  0.11.12.md  0.11.14.md  0.11.15.md  0.11.16.md  0.11.17.md  0.11.19.md  0.11.21.md  0.11.23.md  0.11.6.md  0.11.8.md  0.11.9.md  0.12.0.md  0.12.1.md  0.12.10.md  0.12.2.md  0.12.3.md  0.12.4.md  0.12.5.md  0.12.6.md  0.12.7.md  0.12.8.md  0.12.9.md  0.13.0.md  0.13.1.md  0.13.2.md  0.5.10.md  0.5.9.md  0.6.1.md  0.6.2.md  0.6.3.md  0.6.4.md  1.1.10.md  1.1.11.md  1.1.12.md  1.1.13.md  1.1.14.md  1.1.15.md  1.1.16.md  (+9 more)
.changes/unreleased/: Added-20250117-004016.yaml  Added-20250118-014336.yaml  Added-20250130-234300.yaml  Added-20260102-220329.yaml  Added-20260102-220330.yaml  Added-20260102-220331.yaml  Added-20260102-220332.yaml  Added-20260102-220333.yaml  Added-20260102-220334.yaml  Added-20260102-220335.yaml  Added-20260102-220336.yaml  Added-20260102-220337.yaml  Added-20260102-220338.yaml  Added-20260102-220339.yaml  Added-20260102-220340.yaml  Added-20260102-220341.yaml  Added-20260102-220342.yaml  Added-20260102-220343.yaml  Added-20260102-235624.yaml  Added-20260102-235629.yaml  Added-20260102-235634.yaml  Added-20260102-235638.yaml  Added-20260103-003448.yaml  Added-20260103-003509.yaml  Changed-20260102-220440.yaml  Changed-20260102-220441.yaml  Changed-20260102-220442.yaml  Changed-20260102-220443.yaml  Changed-20260102-220444.yaml  Changed-20260102-235703.yaml  Changed-20260102-235708.yaml  Changed-20260103-001404.yaml  Changed-20260329-002542.yaml  Fixed-20250117-001238.yaml  Fixed-20250117-003237.yaml  Fixed-20260102-220403.yaml  Fixed-20260102-220404.yaml  Fixed-20260102-220405.yaml  Fixed-20260102-220406.yaml  Fixed-20260102-220407.yaml  (+17 more)
.claude/: settings.json
.claude/agents/: murmur-investigator.md  murmur-manager.md  murmur-merge.md  murmur-worker.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: constraints.txt  integration-tests.yml  labeler.yml  lint.yml  release.yml  tests.yml
.loom/: .gitignore
.loom/constitution/: constitution.md  constraints.md  manifest.json  principles.md  roadmap.md  vision.md
.loom/critique/: 20260503-c10ci06-dbt-111-ci-gate.md  20260503-c10ci06-dbt18-test-fix.md  20260503-c10ci06-no-sync-follow-up.md  20260503-c10col01-columninfo-config.md  20260503-c10meta02-column-config-meta-tags.md  20260504-c10bounds29-support-policy-review.md  20260504-c10cfg12-real-config-shape-fixtures.md  20260504-c10detect-fusion-manifest-detection-review.md  20260504-c10docs09-docs-ci-hardening.md  20260504-c10dry17-dry-run-cache-isolation-review.md  20260504-c10feed26-workbench-feed-hardening-final-review.md  20260504-c10feed26-workbench-feed-hardening-review.md  20260504-c10fix11-fixture-isolation-review.md  20260504-c10gen20-safe-generate-yaml-writes-review.md  20260504-c10lint24-lint-diff-cli-review.md  20260504-c10llm23-llm-gate-review.md  20260504-c10lock07-adapter-constraint-follow-up.md  20260504-c10lock07-dependency-resolution.md  20260504-c10lock07-integration-path-follow-up.md  20260504-c10lock07-uv-01012-follow-up.md  20260504-c10loom04-dbt-loom-parser-review.md  20260504-c10loss16-duplicate-yaml-fail-closed-review.md  20260504-c10opt03-nested-options-review.md  20260504-c10ord18-inheritance-ordering-review.md  20260504-c10path19-path-source-error-review.md  20260504-c10pkg10-release-packaging-review.md  20260504-c10proxy25-sql-proxy-boundary-review.md  20260504-c10pyright32-basedpyright-precommit-review.md  20260504-c10pyright32-ci-basedpyright-remediation-review.md  20260504-c10pyright32-ci-pytest-profiles-remediation-review.md  20260504-c10race13-yaml-sync-serialization-review.md  20260504-c10rel08-release-workflow-hardening.md  20260504-c10res14-context-aware-settings-resolver-review.md  20260504-c10sql21-sql-compile-contract-review.md  20260504-c10val27-validation-timeout-review.md  20260504-c10ver15-versioned-yaml-access-review.md  20260504-c10wb22-workbench-target-review.md  20260505-c10anchors30-yaml-anchor-review.md  20260505-c10diff31-schema-diff-review.md  20260505-gh305wb-workbench-extra-preflight-review.md  (+5 more)
.loom/docs/: manifest.json
.loom/evidence/: 20260503-c10ci06-ci-gate-local-verification.md  20260503-c10ci06-ci-run-no-sync-fix.md  20260503-c10ci06-main-ci-dbt18-test-fix.md  20260503-c10ci06-main-ci-success.md  20260503-c10col01-columninfo-config-red-green.md  20260503-c10lock07-local-dependency-resolution-verification.md  20260503-c10meta02-column-config-meta-tags.md  20260503-oracle-backlog-scan.md  20260503-repository-structure-scan.md  20260504-c10bounds29-support-policy-validation.md  20260504-c10cfg12-main-ci-matrix-success.md  20260504-c10cfg12-real-config-shape-fixtures.md  20260504-c10detect-main-ci-success.md  (+54 more)
.memos/: meta.json
.runtime/: session_id
.streamlit/: config.toml
.tickets/: config.yaml  do-0d9e.md  do-734f.md  do-7c18.md  do-9676.md  do-bbbb.md  do-c7a4.md  do-cefc.md  do-ff67.md
demo_duckdb/: .gitignore  .user.yml  dbt-osmosis.yml  dbt_project.yml  integration_tests.sh  jaffle_shop.duckdb  profiles.yml  profiles_test.yml
demo_sqlite/: .gitignore  .user.yml  dbt_project.yml  jaffle_shop.db  profiles.yml
docker/: Dockerfile.dev  docker-compose.yml  shell  shutdown  startup
docs/: README.md  dbt-core-structure.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
markdown-page/: index.html
tests/: __init__.py  conftest.py  scratch_test.py  support.py  test_cli_integration.py  test_column_level_knowledge.py  test_column_level_knowledge_propagator.py  test_core.py  test_fixture_isolation.py  test_llm.py  test_osmosis.py  test_output_to_upper.py  test_package_metadata.py  test_server_v2.py  test_yaml_context.py  test_yaml_inheritance.py  test_yaml_knowledge_graph.py  test_yaml_manager.py
(+426 files in other folders)
