[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-osmosis"
version = "1.0.0"
description = "A dbt utility for managing YAML to make developing with dbt more delightful."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "z3z1ma", email = "butler.alex2010@gmail.com" }]
keywords = ["dbt", "yaml", "osmosis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9,<3.13"

dependencies = [
  "click>7,<9",
  "dbt-core>=1.8,<=1.10",
  "ruamel.yaml~=0.18.7",
  "rich>=10",
  "pluggy>=1.5.0,<2",
  "typing-extensions~=4.12.2 ; python_version < '3.10'",
]

[project.optional-dependencies]
duckdb = ["dbt-duckdb>=1.0.0,<2"]
sqlite = ["dbt-sqlite>=1.0.0,<2"]
postgres = ["dbt-postgres>=1.0.0,<2"]

workbench = [
  "streamlit>=1.20.0,<1.36.0",
  "streamlit-ace~=0.1.1",
  "ydata-profiling~=4.12.1",
  "feedparser~=6.0.11",
  "streamlit-elements-fluence>=0.1.4",
  "setuptools>=70",
]

openai = ["openai>0.28.0"]

dev = ["ruff~=0.8.4", "pytest~=8.3.4", "pre-commit>3.0.0"]

[project.scripts]
"dbt-osmosis" = "dbt_osmosis.cli.main:cli"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
preview = true

[tool.isort]
color_output = true
line_length = 100
profile = "black"
src_paths = ["src"]
include_trailing_comma = true

[tool.ruff]
line-length = 100
