[build-system]
requires = ["hatchling==1.26.3"]  # hatch-vcs
build-backend = "hatchling.build"

[project]
name = "dbt-osmosis"
version = "1.4.0"
description = "A dbt utility for managing YAML to make developing with dbt more delightful."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "z3z1ma", email = "butler.alex2010@gmail.com" }]
keywords = ["dbt", "yaml", "osmosis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<3.14"

dependencies = [
  "click>7,<9",
  "dbt-core>=1.8",
  "dbt-core-interface>=1.1.7",
  "ruamel.yaml>=0.17,<0.19",
  "rich>=10",
  "pluggy>=1.5.0,<2",
  "PyYAML>=6.0",
  "sqlglot>=28,<29",
  "rapidfuzz>=3.0.0",
]

[project.optional-dependencies]
workbench = [
  "streamlit>=1.45.0,<2.0",
  "streamlit-ace~=0.1.1",
  "ydata-profiling>=4.17.0",
  "ipython>=8,<9",
  "feedparser~=6.0.12",
  "streamlit-elements-fluence>=0.1.4",
  "setuptools>=70,<81",
]

openai = ["openai>=1.58.1,<2.37.0"]

azure = ["azure-identity>=1.19,<2"]

duckdb = ["dbt-duckdb>=1,<2"]

proxy = ["mysql-mimic>=2.5.7"]

dev = [
  "basedpyright~=1.38.4",
  "ruff==0.8.6",
  "pytest>=8.3.4,<9.1.0",
  "pytest-cov~=6.0",
  "hypothesis",
  "mutmut",
  "pre-commit>3.0.0,<5",
  "tomli>=2; python_version < \"3.11\"",
  "dbt-duckdb>=1,<2",
]

[project.scripts]
"dbt-osmosis" = "dbt_osmosis.cli.main:cli"

[tool.uv]
override-dependencies = ["protobuf>=5.0,<6.0"]

[tool.ruff]
line-length = 100
preview = true

[tool.pyright]
include = ["src/dbt_osmosis/core", "src/dbt_osmosis/cli"]
exclude = [
  "**/_deps/**",
  "**/.venv/**",
  "demo_duckdb/target/**",
  "src/dbt_osmosis/workbench/**",
  "tests/**",
  "src/dbt_osmosis/sql/**",
]
pythonVersion = "3.10"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = true
reportPrivateImportUsage = false
reportImportCycles = false
reportUnsupportedDunderAll = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "default::DeprecationWarning:dbt",
    "default::DeprecationWarning:dbt_osmosis",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
]
fail_under = 70
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
  "basedpyright~=1.38.4",
  "ruff==0.8.6",
  "pytest>=8.3.4,<9.1.0",
  "pytest-cov~=6.0",
  "hypothesis",
  "mutmut",
  "pre-commit>3.0.0,<5",
  "tomli>=2; python_version < \"3.11\"",
  "dbt-duckdb>=1,<2",
]
